# komainu

./: .gitignore  Dockerfile  Procfile  README.md  app.py  db.py  docker-compose.yml  main.py  pyproject.toml  sqlite_db.sqlite
